# safedriver-iq

./: .coverage  .gitattributes  .gitignore  DEMO_GUIDE.md  PROJECT_SETUP_SUMMARY.md  README.md  SafeDriver-IQ_Presentation.pptx  check_distributions.py  coverage.xml  create_presentation.py  demo_agentic_ai.py  demo_quick.py  pytest.ini  requirements-test.txt  requirements.txt  retrain_model.py  run_complete_demo.py  setup.py  start.sh  test_data_loader.py
CRSS_Data/: formats.sas7bcat
app/: streamlit_app.py
markdownfiles/: README.md
notebooks/: 01_data_exploration.ipynb  02_train_inverse_model.ipynb  03_shap_analysis.ipynb  04_crash_factor_investigation.ipynb
phase2-agentic-multimodel/: .gitignore  README.md  RUNBOOK.md  pyproject.toml  requirements.txt
phase2-agentic-multimodel/docs/: asce2027-architecture.docx  implementation-plan.md  setup.md
phase2-agentic-multimodel/docs/paper/: results.tex
phase2-agentic-multimodel/reference/: test_av2_val_original.py  test_nuscenes_mini_original.py
phase2-agentic-multimodel/src/sdiq/: __init__.py  agentic_layer.py  config.py  data_loader.py  kinematic_features.py  kinematics.py  llm_copilot.py  main.py  nuscenes_mini.py  safedriver_iq_bridge.py  scenario_summary.py  social_force.py  vru_features.py
phase2-agentic-multimodel/tests/: test_agentic.py  test_av2_val.py  test_bridge.py  test_data_loader.py  test_kinematics.py  test_llm_copilot.py  test_main.py  test_nuscenes_mini.py  test_scenario_summary.py  test_vru.py
results/: crash_investigation_behavior_clusters.csv  crash_investigation_feature_importance.csv  (+1 more)
(+259 files in other folders)
